--- a/views/admin/add-products.hbs
+++ b/views/admin/add-products.hbs
@@ -28,7 +28,7 @@
                     <label for="" class="mt-2">Description</label>
                     <input type="text" name="Description" class="form-control">
                     <label for="">Product Quantity</label>
-                    <input type="text" name="quantity" class="form-control">
+                    <input type="number" name="quantity" class="form-control">
                      <div class="text-center">
                     <button type="submit" class="btn btn-success mt-2 ml-auto ">Submit</button>
                     </div>
