--- a/views/admin/update-products.hbs
+++ b/views/admin/update-products.hbs
@@ -17,7 +17,7 @@
                     <label for="">Description</label>
                     <input type="text" name="Description" class="form-control" value="{{product.Description}}">
                     <label for="">Quantity</label>
-                    <input type="text" name="quantity" class="form-control" value="{{product.quantity}}">
+                    <input type="number" name="quantity" class="form-control" value="{{product.quantity}}">
                     <label for="">Image</label>
                     <img class="p-2" src="/product-images/{{product._id}}.jpg" alt="" style="width: 100px;height:auto">
                     <input type="file" class="form-control" name="Image">
