--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -33,6 +33,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700">
         <link rel="stylesheet" href="https://mdbootstrap.com/api/snippets/static/download/MDB5-Free_5.0.0/css/mdb.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.css"/>
 
 {{/if}}
 
@@ -80,6 +81,7 @@
   <script src="/js/mixitup.min.js"></script>
   <script src="/js/owl.carousel.min.js"></script>
   <script src="/js/main.js"></script>
+  {{!-- <script src="/js/script.js "></script> --}}
   {{!-- <script src="/js/sw_cached_pages.js"></script> --}}
 
 
