--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -22,9 +22,9 @@
         </a>
 
         {{#if tabProducts}}
-                <a href="/list-products" class="list-group-item list-group-item-action py-2 ripple active">
+                <a href="/list-products?page=1" class="list-group-item list-group-item-action py-2 ripple active">
         {{else}}
-                <a href="/list-products" class="list-group-item list-group-item-action py-2 ripple">
+                <a href="/list-products?page=1" class="list-group-item list-group-item-action py-2 ripple">
         {{/if}}
           <i class="fas fa-building fa-fw me-3"></i>
 
