--- a/views/user/shop.hbs
+++ b/views/user/shop.hbs
@@ -16,7 +16,7 @@
                 {{#each products}}
                 <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
                     <div class="product__item">
-                        <a href="/product-detail/?id={{this._id}}&Category={{this.Category}}">
+                        <a href="/product-detail?id={{this._id}}&Category={{this.Category}}">
                             <div class="product__item__pic set-bg" data-setbg="/product-images/{{this._id}}.jpg">
                             </div>
                         </a>
