--- a/views/admin/list-users.hbs
+++ b/views/admin/list-users.hbs
@@ -4,6 +4,7 @@
         <table class="table table table-striped table-bordered" id="example">
             <thead>
                 <tr>
+                    <th>sl no</th>
                     <th scope="col">Name</th>
                     <th scope="col">Email</th>
                     <th scope="col">Contact</th>
@@ -13,6 +14,7 @@
             <tbody>
                 {{#each users}}
                 <tr>
+                    <td>{{math @index '+' 1}}</td>
                     <td>{{this.name}}</td>
                     <td>{{this.email}}</td>
                     <td>{{this.contact}}</td>
