--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -1,14 +1,15 @@
 <div class="container">
     <div class="row d-flex justify-content-center">
-        <div class="m-5" style="background: #fff;">
+        <span class="m-5" style="background: #fff;">
             <h2 class="text-center fw-bold text-decoration-underline">Orders</h2>
-            <table class="table table table-striped table-bordered text-center " id="example">
+            <table class="table align-middle mb-0 bg-whit " id="example">
 
                 <thead class="text-center">
                     <tr>
                         {{!-- <th>Sl#</th> --}}
+                        {{!-- <th>sl no</th> --}}
                         <th scope="col" class="text-center">Order_Date</th>
-                        <th scope="col" class="text-center">Product Name</th>
+                        <th scope="col" class="text-center">Product</th>
                         <th scope="col" class="text-center">Price</th>
                         <th scope="col" class="text-center">Quantity</th>
                         <th scope="col" class="text-center">Billing Address</th>
@@ -27,8 +28,18 @@
                     {{!-- <td>
                         <h2>{{@index}}
                     </td> --}}
+                    
                     <td>{{../this.date}}</td>
-                    <td>{{this.name}}</td>
+                    <td>
+                        <div class="product__cart__item__pic mb-2">
+                            <a href="/product-detail?id={{this._id}}">
+                                <img src="/product-images/{{this._id}}.jpg" alt="product Img" style="width:90px ;">
+                            </a>
+                        </div>
+                        <P class="fw-bold mb-1">
+                            {{this.name}}
+                        </P>
+                    </td>
                     <td>{{this.price}}</td>
                     <td>{{this.quantity}}</td>
                     <td>{{../this.addressDetails.address}}, {{../this.addressDetails.city}},
@@ -61,9 +72,10 @@
                     </td>
                     {{#if this.status}}
                     <td id="status-{{../this._id}},{{this._id}}">
-                        <div style="background-color: rgb(27, 186, 27); color: white; border-radius: 5px;">
+                        <span class="badge badge-success rounded-pill d-inline">    
                             {{this.status}}
-                        </div>
+                            </h6>
+                        </span>
 
                         {{else}}
 
@@ -125,7 +137,7 @@
 
     $(document).ready(function () {        
         var table = $('#example').DataTable({
-            "order": [[ 0, 'desc' ]],
+            "order": [],
             dom: 'Bfrtip',
             buttons: [{
                 extend: "print",
