--- a/views/index.hbs
+++ b/views/index.hbs
@@ -112,9 +112,10 @@
 
             <div class="row product__filter ">
                 {{#each products}}
+                {{#if (compare this.quantity '>' 0)}}
                 <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
                     <div class="product__item">
-                        <a href="/product-detail/?id={{this._id}}&Category={{this.Category}}">
+                        <a href="/product-detail?id={{this._id}}&Category={{this.Category}}">
                             <div class="product__item__pic set-bg" data-setbg="/product-images/{{this._id}}.jpg">
                             </div>
                         </a>
@@ -130,6 +131,7 @@
                         </div>
                     </div>
                 </div>
+                {{/if}}
                 {{/each}}
             </div>
         </div>
