--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -13,7 +13,7 @@
     </div>
     <div class="offcanvas__nav__option">
       <a href="#" class="search-switch"><img src="/img/icon/search.png" alt=""></a>
-      <a href="#"><img src="/img/icon/cart.png" alt=""> <span id="cart-count">{{cartCount}}</a>
+      <a href="/cart"><img src="/img/icon/cart.png" alt=""> <span id="cart-count">{{cartCount}}</a>
     </div>
     <div id="mobile-menu-wrap"></div>
     <div class="offcanvas__text">
@@ -38,7 +38,7 @@
                       {{#if uname}}
                       <a id="Username" href="/account" style="text-decoration: none;">{{uname}}</a>
                       {{else}}
-                      <a href="login">Sign in</a>
+                      <a href="/login">Sign in</a>
                       {{/if}}
                 {{!-- <a href="login">Sign in</a> --}}
                 <a href="#">FAQs</a>
