products logical error find

--- a/views/admin/list-products.hbs
+++ b/views/admin/list-products.hbs
@@ -21,7 +21,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {{if products}}
+                    {{#if products}}
                     {{#each products}}
                     <tr>
                         <td>{{math (math (math (math ../page '-' 1) '*' 10) '+' @index) '+' 1}}</td>
