--- a/views/index.hbs
+++ b/views/index.hbs
@@ -115,7 +115,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-sm-6">
                         <div class="product__item">
                             
-                            <div class="product__item__pic set-bg" data-setbg="/product-images/{{this._id}}.jpg" >
+                            <div class="product__item__pic set-bg" data-setbg="/product-images/{{this.image}}" >
                                 <span class="label">{{this.Offer}}% Off</span>
                                 <ul class="product__hover">
                                     {{#if ../wishList}}
