--- a/views/user/shop.hbs
+++ b/views/user/shop.hbs
@@ -17,7 +17,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
                     <div class="product__item">
                         <a href="/product-detail?id={{this._id}}&Category={{this.Category}}">
-                            <div class="product__item__pic set-bg" data-setbg="/product-images/{{this._id}}.jpg">
+                            <div class="product__item__pic set-bg" data-setbg="/product-images/{{this.image}}.jpg">
                             </div>
                         </a>
                         <div class="product__item__text">
