--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,7 +27,7 @@
                 </div>
             </div>
     {{/each}}
-            <div class="hero__items set-bg" data-setbg="/img/hero/hero-2.jpg">
+            <div class="hero__items set-bg" data-setbg="/img/hero/hero-2.">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-5 col-lg-7 col-md-8">
@@ -114,7 +114,6 @@
                 {{#each products}}
                     <div class="col-lg-3 col-md-6 col-sm-6 col-sm-6">
                         <div class="product__item">
-                            
                             <div class="product__item__pic set-bg" data-setbg="/product-images/{{this.image}}" >
                                 <span class="label">{{this.Offer}}% Off</span>
                                 <ul class="product__hover">
