--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,7 +27,7 @@
                 </div>
             </div>
     {{/each}}
-            <div class="hero__items set-bg" data-setbg="/img/hero/hero-2.">
+            <div class="hero__items set-bg" data-setbg="/img/hero/hero-2.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-5 col-lg-7 col-md-8">
