--- a/views/index.hbs
+++ b/views/index.hbs
@@ -325,7 +325,7 @@
                 window.location.href='/product-detail?id='+id+'&category='+category
         }
         function addToFav(prodId){
-            alert("add")
+            alert("added to wishlist")
             $.ajax({
                 url:'/addtoWishList?prodId='+prodId,
                 method:'get',
@@ -341,7 +341,7 @@
             })
         }
         function RemoveWishlist(prodId){
-            alert("rem")
+            alert("Removed from wishlist")
               $.ajax({
                 url:'/removeFromWishList?prodId='+prodId,
                 method:'get',
