--- a/views/user/product-details.hbs
+++ b/views/user/product-details.hbs
@@ -385,7 +385,7 @@ window.onload = () => { addZoom("zoomC"); };
                 {{#each products}}
                     <div class="col-lg-3 col-md-6 col-sm-6 col-sm-6">
                         <div class="product__item">
-                            <div class="product__item__pic set-bg" data-setbg="/product-images/{{this._id}}.jpg">
+                            <div class="product__item__pic set-bg" data-setbg="/product-images/{{this.image}}">
                                 <span class="label">New</span>
                                 <ul class="product__hover">
                                     <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
