error 23, img-2 logical errors cleared

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -91,7 +91,7 @@
               <tr>
                 <td class="product__cart__item">
                   <div class="product__cart__item__pic">
-                    <img src="/product-images/{{this.products._id}}.jpg" alt="product Img" style="width:90px ;">
+                    <img src="/product-images/{{this.products.image}}" alt="product Img" style="width:90px ;">
                   </div>
                   <div class="product__cart__item__text">
                     <h6>{{this.products.Name}}</h6>
